Fixed line spacing; fixed newspaper header

--- a/muckraker/static/style.css
+++ b/muckraker/static/style.css
@@ -65,37 +65,40 @@ html {
     font-family: TT2020;
 }
 
-h1, h2 {
+header h1, h2 {
     text-align: center;
-    margin: 2mm;
-    page-break-after: avoid;
+    margin: 4mm;
 }
 
-#heading h1 {
+header h1 {
     string-set: title content();
     font-size: 38pt;
 }
 
-#heading .issue-info {
+header h2 {
+    font-size: 14pt;
+}
+
+header .issue-info {
     column-count: 3;
     font-weight: bold;
     padding: 0;
     border-top: 0.2mm solid black;
     border-bottom: 0.2mm solid black;
-    margin-bottom: 2mm;
+    margin: 2mm 0;
 }
 
-#heading .issue-info .issue-no {
+header .issue-info .issue-no {
     text-align: left;
     margin: 1mm;
 }
 
-#heading .issue-info .issue-date {
+header .issue-info .issue-date {
     text-align: center;
     margin: 1mm;
 }
 
-#heading .issue-info .issue-cost {
+header .issue-info .issue-cost {
     text-align: right;
     margin: 1mm;
 }
@@ -105,12 +108,18 @@ h1, h2 {
     column-rule: 0.2mm solid black;
 }
 
+.columns h1, h2 {
+    text-align: center;
+    margin: 2mm;
+    page-break-after: avoid;
+}
+
 .columns h1 {
     font-size: 16pt;
 }
 
 .columns h2 {
-    font-size: 12pt;
+    font-size: 14pt;
 }
 
 .columns img {
@@ -122,6 +131,7 @@ h1, h2 {
 .columns p {
     margin: 2mm;
     text-indent: 2mm;
+    line-height: 100%;
 }
 
 .columns table {
